Fix text-align

--- a/components/02-molecules/page-header/standard-header/_standard-header.scss
+++ b/components/02-molecules/page-header/standard-header/_standard-header.scss
@@ -9,6 +9,7 @@
 
   &__title {
     margin-bottom: $spacer-xs;
+    text-align: center;
     line-height: $standard-header-title-line-height-small;
     color: $standard-header-title-color;
     font-size: $standard-header-title-font-size-small;
